fix overflow x

--- a/TWEB_FE/src/assets/main.css
+++ b/TWEB_FE/src/assets/main.css
@@ -3,6 +3,7 @@
 * {
   box-sizing: inherit;
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
 }
 
 :root {
